--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<version>1.1.2</version>
 		</dependency>
 		<!--/jstl-->
+		<!-- tomcat에 jsp를 처리하는 servlet 내장 -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+		<!-- tomcat에 jsp를 처리하는 servlet 내장 -->
 
 		<!-- thymeleaf-->
 		<dependency>
