메일 설정파일 분리완료 및 DB 로그 설정

--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/account.properties
+/src/main/resources/db.properties
 /src/main/resources/email.properties
