--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 		</dependency>
 		<!--email 인증-->
 
+		<!-- log4jdbc -->
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
+		<!-- log4jdbc -->
+
 
 	</dependencies>
 
