회원 가입 완료

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 /src/main/resources/db.properties
 /src/main/resources/email.properties
+!/src/main/resources/application.properties
