--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@ build/
 .vscode/
 /src/main/resources/db.properties
 /src/main/resources/email.properties
-!/src/main/resources/application.properties
+/src/main/resources/application.properties
+
