quartz 스케줄러 적용 및 회원 탈퇴 기능 추가

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
 		</dependency>
 		<!-- log4jdbc -->
 
+		<!-- Quartz  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+		<!-- Quartz  -->
+
 
 	</dependencies>
 
