--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# Oracle DataSource
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:oracle:thin:@192.168.244.143:1521/ORCL
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@192.168.244.143:1521/ORCL
+spring.datasource.username=c##0sujeong
+spring.datasource.password=0000
+
 ##### SSL
 server.port=8443
 # 인증서 위치
@@ -19,10 +27,9 @@ spring.devtools.livereload.enabled=true
 
 #Model. Location
 mybatis.type-aliases-package=kr.co.nectarsoft.board
-
 #Xml Location
 mybatis.mapper-locations=classpath:mappers/**/*.xml
-
+mybatis.config-location=classpath:typealiases/types.xml
 
 ##### view 화면 경로
 # jsp 파일
@@ -44,3 +51,8 @@ logging.level.jdbc.resultsettable=INFO
 logging.level.jdbc.audit=OFF
 logging.level.jdbc.resultset=OFF
 logging.level.jdbc.connection=OFF
+
+
+####quartz 관련
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+spring.quartz.scheduler-name=TestScheduler
