bean validation 적용

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,15 @@
 		</dependency>
 		<!-- Quartz  -->
 
+		<!-- validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.6.8</version>
+		</dependency>
+
+		<!-- validation -->
+
 
 	</dependencies>
 
