--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,7 @@ logging.level.jdbc.connection=OFF
 #### quartz 관련
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
 spring.quartz.scheduler-name=TestScheduler
+
+
+### 메시지 관련
+spring.messages.basename=errors
